Show landscape slug below color list - Show landscape slug - Lock body scroll when color popup is open - Fix horizontal scroll issue on iOS

--- a/BikeWale.UI/sass/partials/_color-popup.sass
+++ b/BikeWale.UI/sass/partials/_color-popup.sass
@@ -46,6 +46,7 @@
 	line-height: 52px
 
 .color-popup__thumbnail-content
+	overflow: scroll
 	border-top: 1px solid color('gainsboro')
 
 // colors carousel
@@ -132,7 +133,7 @@
 		.color-box-label
 			font-size: 8px
 			padding-left: 8px			
-			height: 24px
+			max-height: 24px
 
 		.color-box__content
 			padding-top: 8px
