--- a/BikeWale.UI/sass/partials/_gallery-popup.sass
+++ b/BikeWale.UI/sass/partials/_gallery-popup.sass
@@ -143,6 +143,8 @@
 	color: color('light-grey')
 
 .gallery-image__feature
+	overflow: hidden
+
 	a,
 	span
 		padding: 20px
